Bug 34341: Revert Bug 34072: Holds queue search interface hidden on small screens
This patch undoes the changes made by 34072 because they have had a more
far-reaching effect than was expected. I have never been able to
reproduce Bug 34072 before the patch.

To test, apply the patch and rebuild the staff interface CSS.

- Go to Circulation -> Holds queue
- Try adjusting the width of the browser window to confirm that it is
  responsive at various widths.
- When the viewport width is below 768 the page layout will adjust, and
  the contents of the sidebar will drop below the table of holds. This
  is consistent with other pages in the staff interface.
- Check that the corrected CSS has resulted in a correction to the
  layout of submit buttons in forms:
  - For example, in Administration -> Cities and towns -> New city.
  - Before the patch there was no padding between the submit button and
    the white fieldset containing the form fields.
  - After the patch the correct padding has been restored.

(cherry picked from commit 8d78ba7ff2612f784b97e76d881899b9cb8fa342)
(cherry picked from commit a6e5504affb8b6f90c9322306653a3dc0783e059)

--- a/koha-tmpl/intranet-tmpl/prog/css/src/_forms.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_forms.scss
@@ -19,6 +19,8 @@ fieldset {
     }
 
     &.rows {
+        clear: left;
+        float: left;
         margin: .9em 0 0;
         padding: 1rem;
         width: 100%;
